--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.2.6",
     "cheerio": "^1.0.0-rc.12",
+    "normalize-text": "^2.4.1",
     "pdf-parse": "^1.1.1",
     "xlsx": "^0.18.5"
   }
